# DySECT

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  compile  ppr_v0.org  readme.md  readme.org  strategic_ideas.org
130tests/: script.sh
130tests/eval/: org-r-analyze.org
eval/: plotting.org
example/: example.cpp
include/: bucket.h  bucket.hpp  chaining.hpp  cobucket.h  cobucket.hpp  config.h  cuckoo.h  cuckoo_base.h  cuckoo_base.hpp  cuckoo_continous.h  cuckoo_deamortized.h  cuckoo_deamortized.hpp  cuckoo_dysect.h  cuckoo_dysect.hpp  cuckoo_eg2l.h  cuckoo_homogeneous2l.h  cuckoo_independent2l.h  cuckoo_independent_2lvl.h  cuckoo_independent_2lvl.hpp  cuckoo_multi_base.h  cuckoo_overlap.h  cuckoo_overlap.hpp  cuckoo_simple.h  cuckoo_simple.hpp  growing_cuckoo.h  growing_multi_cuckoo.h  hasher.h  hom_2lvl_cuckoo.h  hom_2lvl_multi_cuckoo.h  hopscotch.h  impr_triv_multi_cuckoo.h  iterator_base.h  iterator_base.hpp  lin_prob.h  prob_base.h  prob_base.hpp  prob_coalesced.h  prob_coalesced.hpp  prob_hops.h  prob_hops.hpp  (+15 more)
include/displacement_strategies/: dis_bfs0.h  dis_bfs1.h  dis_deterministic_walk.hpp  dis_random_walk_acyclic.h  dis_random_walk_acyclic.hpp  dis_random_walk_cyclic.h  dis_random_walk_optimistic.h  dis_random_walk_optimistic.hpp  dis_trivial.h  dis_trivial.hpp  dstrat_bfs.h  dstrat_nbfs.h  dstrat_rwalk_anticycle.h  dstrat_rwalk_cyclic.h  dstrat_rwalk_optimistic.h  dstrat_triv.h  main_strategies.h  main_strategies.hpp  summary.h
include/multistrategies/: dstrat_bfs.h  dstrat_rwalk.h  dstrat_rwalk_cyclic.h  dstrat_triv.h  summary.h
include/strategies/: dstrat_bfs.h  dstrat_rwalk.h  dstrat_rwalk_cyclic.h  dstrat_triv.h  summary.h
misc/cmake/: FindtslHopscotch.cmake
paper/: inplace_grow_paper.org  lipics-v2016-sample-article.tex  paper.bib  paper.tex  ppr_v0.org
script/: aggregation.sh  all_scripts.sh  cache_test.sh  deletetion.sh  growing.sh  load_bound.sh  non_growing.sh
source/: crawl_test.cpp  del_test.cpp  displ_test.cpp  eps_test.cpp  in_test.cpp  mix_test.cpp  mixd_test.cpp  mxls_test.cpp  probe_new_test.cpp  probe_test.cpp  reg_test.cpp  selection.h  selection.hpp  sing_test.cpp  step_test.cpp  tem_tests.cpp  time_test.cpp
tests/: script.sh
tests/eval/: DistVisualization.ipynb  HistVisualization.ipynb  StepwiseDistVisualization.ipynb  StepwiseHistVisualization.ipynb  org-analyze-time.org  org-r-analyze.org
utils/: commandline.h  counting_wait.h  default_hash.h  hashfct.h  test_coordination.h  thread_basics.h
utils/hash/: xx_hash.h
utils_replaced/: commandline.h
utils_replaced/hash/: crc_hash.h  murmur2_hash.h  murmur3_hash.h
